@@ -1,3 +1,3 @@
 # because it can't be empty on github
 
-__version__ = "0.8.7.0"
+__version__ = "0.8.8.0"
