@@ -7,7 +7,7 @@ from pmanager.res import *
 
 def initialize(namespace):
 
-    project_name = namespace.project_name[0]
+    project_name = namespace.project_name
     git_url = namespace.git_url[0]
 
     if not path.exists("config/default_path.conf"):
