@@ -23,7 +23,7 @@ def initialize(namespace):
 
     """
 
-    project_name = namespace.project_name[0]
+    project_name = namespace.project_name
 
     
     if not path.exists("config/default_path.conf"):
