@@ -21,7 +21,7 @@ def run_cmd(cmd):
 def initialize(namespace):
 
 
-    project_name = namespace.project_name[0]
+    project_name = namespace.project_name
 
     if not path.exists("config/default_path.conf"):
 
