@@ -4,7 +4,7 @@ from os import walk
 
 def initialize(namespace):
 
-    project_name = namespace.project_name[0]
+    project_name = namespace.project_name
 
     if not path.exists("config/default_path.conf"):
         dirpath = get_home_dir_path()+"/projects/"+project_name
